--- a/test-output/old/User_Module_Suite/methods.html
+++ b/test-output/old/User_Module_Suite/methods.html
@@ -1,14 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>User_Module_Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b19bbd">  <td>23/07/12 19:07:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test2.TestPostUser()[pri:1, instance:api.test.User_Test2@7b36aa0c]">TestPostUser</td> 
-  <td>main@1233308726</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/07/12 19:08:01</td>   <td>18209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test2.TestUpdateUser()[pri:3, instance:api.test.User_Test2@7b36aa0c]">TestUpdateUser</td> 
-  <td>main@1233308726</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/07/12 19:07:36</td>   <td>-6150</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;User_Test2.setup()[pri:0, instance:api.test.User_Test2@7b36aa0c]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1233308726</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/07/12 19:08:04</td>   <td>21876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test2.TestDeleteUser()[pri:4, instance:api.test.User_Test2@7b36aa0c]">TestDeleteUser</td> 
-  <td>main@1233308726</td>   <td></td> </tr>
-<tr bgcolor="b19bbd">  <td>23/07/12 19:07:58</td>   <td>15525</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test2.TestGetUser()[pri:2, instance:api.test.User_Test2@7b36aa0c]">TestGetUser</td> 
-  <td>main@1233308726</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/07/14 13:40:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test.TestGetUser()[pri:2, instance:api.test.User_Test@60099951]">TestGetUser</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="647f75">  <td>23/07/14 13:40:05</td>   <td>-8054</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test2.TestGetUser()[pri:2, instance:api.test.User_Test2@1c7696c6]">TestGetUser</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>23/07/14 13:39:47</td>   <td>-26828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Store_Test.TestGetInventory()[pri:4, instance:api.test.Store_Test@38cee291]">TestGetInventory</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/07/14 13:40:12</td>   <td>-1513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test.TestPostUser()[pri:1, instance:api.test.User_Test@60099951]">TestPostUser</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/07/14 13:39:56</td>   <td>-17240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Post_user(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.Data_driven_User_Test@6c1a5b54]">Test_Post_user</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/07/14 13:40:12</td>   <td>-1768</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;User_Test.setup()[pri:0, instance:api.test.User_Test@60099951]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/07/14 13:40:01</td>   <td>-12185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Delete_user(java.lang.String)[pri:2, instance:api.test.Data_driven_User_Test@6c1a5b54]">Test_Delete_user</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/07/14 13:40:18</td>   <td>4858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test.TestDeleteUser()[pri:4, instance:api.test.User_Test@60099951]">TestDeleteUser</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/07/14 13:40:01</td>   <td>-12185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Delete_user(java.lang.String)[pri:2, instance:api.test.Data_driven_User_Test@6c1a5b54]">Test_Delete_user</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="647f75">  <td>23/07/14 13:40:07</td>   <td>-6532</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test2.TestUpdateUser()[pri:3, instance:api.test.User_Test2@1c7696c6]">TestUpdateUser</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="75d2d7">  <td>23/07/14 13:40:15</td>   <td>1702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test.TestUpdateUser()[pri:3, instance:api.test.User_Test@60099951]">TestUpdateUser</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/07/14 13:40:01</td>   <td>-12185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Delete_user(java.lang.String)[pri:2, instance:api.test.Data_driven_User_Test@6c1a5b54]">Test_Delete_user</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="647f75">  <td>23/07/14 13:40:03</td>   <td>-10623</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;User_Test2.setup()[pri:0, instance:api.test.User_Test2@1c7696c6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>23/07/14 13:39:45</td>   <td>-28762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Store_Test.TestDeleteOrder()[pri:3, instance:api.test.Store_Test@38cee291]">TestDeleteOrder</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/07/14 13:39:56</td>   <td>-17240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Post_user(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.Data_driven_User_Test@6c1a5b54]">Test_Post_user</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="647f75">  <td>23/07/14 13:40:10</td>   <td>-3333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test2.TestDeleteUser()[pri:4, instance:api.test.User_Test2@1c7696c6]">TestDeleteUser</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>23/07/14 13:39:43</td>   <td>-30484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Store_Test.TestGetOrder()[pri:2, instance:api.test.Store_Test@38cee291]">TestGetOrder</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="bce87c">  <td>23/07/14 13:39:56</td>   <td>-17240</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Post_user(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.Data_driven_User_Test@6c1a5b54]">Test_Post_user</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>23/07/14 13:39:31</td>   <td>-42072</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Store_Test.setup()[pri:0, instance:api.test.Store_Test@38cee291]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>23/07/14 13:39:34</td>   <td>-39726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Store_Test.TestPostOrder()[pri:1, instance:api.test.Store_Test@38cee291]">TestPostOrder</td> 
+  <td>main@337799666</td>   <td></td> </tr>
+<tr bgcolor="647f75">  <td>23/07/14 13:40:04</td>   <td>-9843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="User_Test2.TestPostUser()[pri:1, instance:api.test.User_Test2@1c7696c6]">TestPostUser</td> 
+  <td>main@337799666</td>   <td></td> </tr>
 </table>
