--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8aa092">  <td>23/07/12 16:06:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Delete_user(java.lang.String)[pri:2, instance:api.test.Data_driven_User_Test@12aba8be]">Test_Delete_user</td> 
-  <td>main@1894601438</td>   <td></td> </tr>
-<tr bgcolor="8aa092">  <td>23/07/12 16:06:45</td>   <td>-6743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Post_user(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.Data_driven_User_Test@12aba8be]">Test_Post_user</td> 
-  <td>main@1894601438</td>   <td></td> </tr>
-<tr bgcolor="8aa092">  <td>23/07/12 16:06:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Delete_user(java.lang.String)[pri:2, instance:api.test.Data_driven_User_Test@12aba8be]">Test_Delete_user</td> 
-  <td>main@1894601438</td>   <td></td> </tr>
-<tr bgcolor="8aa092">  <td>23/07/12 16:06:45</td>   <td>-6743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Post_user(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.Data_driven_User_Test@12aba8be]">Test_Post_user</td> 
-  <td>main@1894601438</td>   <td></td> </tr>
-<tr bgcolor="8aa092">  <td>23/07/12 16:06:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Delete_user(java.lang.String)[pri:2, instance:api.test.Data_driven_User_Test@12aba8be]">Test_Delete_user</td> 
-  <td>main@1894601438</td>   <td></td> </tr>
-<tr bgcolor="8aa092">  <td>23/07/12 16:06:45</td>   <td>-6743</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_driven_User_Test.Test_Post_user(java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String,java.lang.String)[pri:1, instance:api.test.Data_driven_User_Test@12aba8be]">Test_Post_user</td> 
-  <td>main@1894601438</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>23/07/13 18:51:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Store_Test.setup()[pri:0, instance:api.test.Store_Test@25641d39]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1128132589</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>23/07/13 18:51:46</td>   <td>327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Store_Test.TestPostOrder()[pri:1, instance:api.test.Store_Test@25641d39]">TestPostOrder</td> 
+  <td>main@1128132589</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>23/07/13 18:51:58</td>   <td>11746</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Store_Test.TestDeleteOrder()[pri:3, instance:api.test.Store_Test@25641d39]">TestDeleteOrder</td> 
+  <td>main@1128132589</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>23/07/13 18:51:56</td>   <td>9943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Store_Test.TestGetOrder()[pri:2, instance:api.test.Store_Test@25641d39]">TestGetOrder</td> 
+  <td>main@1128132589</td>   <td></td> </tr>
+<tr bgcolor="f376b9">  <td>23/07/13 18:51:59</td>   <td>13372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Store_Test.TestGetInventory()[pri:4, instance:api.test.Store_Test@25641d39]">TestGetInventory</td> 
+  <td>main@1128132589</td>   <td></td> </tr>
 </table>
